--- a/src/app/shared/components/layout/header/header.component.html
+++ b/src/app/shared/components/layout/header/header.component.html
@@ -2,7 +2,7 @@
   class="flex flex-wrap sm:justify-start sm:flex-nowrap w-full bg-white text-sm py-20"
 >
   <nav
-    class="max-w-[115rem] w-full flex flex-wrap basis-full items-center justify-between"
+    class="max-w-[118rem] w-full flex flex-wrap basis-full items-center justify-between"
     aria-label="Global"
   >
     <div class="flex items-center">
@@ -12,7 +12,7 @@
         alt="fractal-logo"
         class="bg-cover w-24 rounded-r-2xl"
       />
-      <a class="sm:order-1 flex-none text-2xl font-bold ml-2" href="#"
+      <a class="sm:order-1 flex-none text-2xl font-bold ml-2"
         ><svg
           class="inline-block mr-2.5 w-8 h-8"
           viewBox="0 0 24 24"
@@ -59,15 +59,15 @@
         Máquinas</a
       >
     </div>
-    <div class="sm:order-last flex items-center gap-x-2 px-3">
+    <div class="sm:order-last flex items-center gap-x-2 px-2 md:px-5">
       <button
         (click)="backToLogin()"
         type="button"
-        class="inline-flex items-center text-sm font-medium"
+        class="inline-flex transition-colors items-center justify-center text-sm font-medium text-black hover:bg-[#ff7600] hover:text-white rounded-full size-[40px]"
       >
         <svg
           class="w-6 h-6"
-          fill="#000000"
+          fill="currentColor"
           viewBox="0 0 16 16"
           xmlns="http://www.w3.org/2000/svg"
         >
