--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -144,6 +144,7 @@
                       </svg>
                     </span>
                     <span
+                      (click)="openModalEdit()"
                       class="inline-flex justify-center items-center size-[46px] rounded-full hover:bg-[#ff7600] hover:text-white text-gray-700 transition-colors cursor-pointer"
                     >
                       <svg
