--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -14,8 +14,41 @@
               <h2 class="text-xl font-semibold text-gray-800">Máquinas</h2>
               <span
                 class="inline-flex items-center gap-x-1.5 py-1.5 px-3 rounded-full text-xs font-bold bg-[#ffe5ca] text-[#ff9b33]"
-                >100 máquinas</span
+                >{{ equipos.length }} máquinas</span
               >
+            </div>
+            <div class="sm:col-span-1 md:w-1/3">
+              <label for="hs-as-table-product-review-search" class="sr-only"
+                >Search</label
+              >
+              <div class="relative">
+                <input
+                  type="text"
+                  id="hs-as-table-product-review-search"
+                  name="hs-as-table-product-review-search"
+                  class="py-2 px-3 ps-11 block w-full border-gray-200 outline-1 border rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                  placeholder="Search"
+                />
+                <div
+                  class="absolute inset-y-0 start-0 flex items-center pointer-events-none ps-4"
+                >
+                  <svg
+                    class="flex-shrink-0 size-4 text-gray-400 dark:text-neutral-500"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <circle cx="11" cy="11" r="8" />
+                    <path d="m21 21-4.3-4.3" />
+                  </svg>
+                </div>
+              </div>
             </div>
           </div>
           <!-- End Header -->
@@ -74,14 +107,17 @@
             </thead>
 
             <tbody class="divide-y divide-gray-200">
-              <tr>
+              <tr *ngFor="let equipo of equipos">
                 <td class="size-px whitespace-nowrap">
                   <div class="ps-6 py-3">
-                    <label for="hs-at-with-checkboxes-1" class="flex">
+                    <label
+                      [for]="equipo.nombreEquipo + 'hs-at-with-checkboxes'"
+                      class="flex"
+                    >
                       <input
                         type="checkbox"
                         class="shrink-0 border-0 border-gray-200 rounded text-blue-600 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                        id="hs-at-with-checkboxes-1"
+                        [id]="equipo.nombreEquipo + 'hs-at-with-checkboxes'"
                       />
                       <span class="sr-only">Checkbox</span>
                     </label>
@@ -97,9 +133,9 @@
                         alt="Image Description"
                       />
                       <div class="grow">
-                        <span class="text-sm text-gray-800 font-bold"
-                          >Máquina Molde 1</span
-                        >
+                        <span class="text-sm text-gray-800 font-bold">{{
+                          equipo.nombreModelo
+                        }}</span>
                       </div>
                     </div>
                   </div>
@@ -119,15 +155,22 @@
                       >
                         <circle cx="8" cy="8" r="8" />
                       </svg>
-                      En curso
+                      {{
+                        equipo.idEstadoRegistro === 1
+                          ? "Habilitado"
+                          : "Deshabilitado"
+                      }}
                     </span>
                   </div>
                 </td>
 
                 <td class="size-px whitespace-nowrap">
                   <div class="px-6 py-1.5">
-                    <span
-                      (click)="openModal()"
+                    <button
+                      [attr.data-hs-overlay]="
+                        '#hs-basic-modal' + equipo.nombreEquipo
+                      "
+                      type="button"
                       class="inline-flex justify-center items-center size-[46px] rounded-full hover:bg-[#ff7600] hover:text-white text-gray-700 transition-colors cursor-pointer"
                     >
                       <svg
@@ -142,7 +185,8 @@
                           d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"
                         />
                       </svg>
-                    </span>
+                    </button>
+
                     <span
                       (click)="openModalEdit()"
                       class="inline-flex justify-center items-center size-[46px] rounded-full hover:bg-[#ff7600] hover:text-white text-gray-700 transition-colors cursor-pointer"
@@ -162,6 +206,8 @@
                     </span>
                   </div>
                 </td>
+                <!-- Modal Delete-->
+                <app-delete [id]="equipo.nombreEquipo"></app-delete>
               </tr>
             </tbody>
           </table>
